--- a/404.html
+++ b/404.html
@@ -9,5 +9,6 @@ permalink: /404.html
     </head>
     <body>
         You're not supposed to be here
+        <a class="btn" href="/#">Go back to index page</a>
     </body>
 </html>
