--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <div class="item">
                 <h2>Doodle cleaner</h2>
                 <p>Pass doodles here to get rid of <span title="Unnecesary stuff">bloatware</span></p>
-                <a href="./cleaner.html" class="btn">Visit</a>
+                <a href="./cleaner" class="btn">Visit</a>
             </div><br>
             <div class="item">
                 <h2>Doodle pngfier</h2>
                 <p>Convert your doodle into a PNG file</p>
-                <a href="./pngfier.html" class="btn">Visit</a>
+                <a href="./pngfier" class="btn">Visit</a>
             </div>
         </div>
     </body>
